# lissh-esp32

./: .gitmodules  CMakeLists.txt  Makefile  README.md  esp32-defconfig.sh  sdkconfig
components/gpio/: CMakeLists.txt  gpio.c
components/io/: CMakeLists.txt  gpio.c  uart.c
components/time/: CMakeLists.txt  time.c
main/: CMakeLists.txt  main.c
test/: generator.lisp
